<resources>
    <string name="app_name">myTask</string>

    <!--OnBoarding-->
    <string name="onboard_1_1">Lebih Mudah Dalam Mengatur Tugas</string>
    <string name="onboard_1_2">Tasku membantu kamu lebih mudah dalam mengatur tugas sehingga kamu mempunyai waktu yang tidak terbuang sia-sia </string>
    <string name="onboard_2_1">Membuat Kamu Menjadi Lebih Produktif</string>
    <string name="onboard_2_2">Ketika kamu menyelesaikan tugas sesuai dengan estimasi waktu dan dilakukan secara terus menerus akan membuat kamu menjadi produktif</string>
    <string name="onboard_3_1">Menghindari Lupa</string>
    <string name="onboard_3_2">Ketika kamu menyelesaikan tugas sesuai dengan estimasi waktu dan dilakukan secara terus menerus akan membuat kamu menjadi produktif</string>

    <!--cta-->
    <string name="skip">Skip</string>
    <string name="mulai_sekarang">Mulai Sekarang</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="google_account_login">Masuk dengan Google</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Buat Akun</string>
    <string name="google">Google</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="change_password">Ganti Kata sandi</string>
    <string name="logout">Keluar</string>
    <string name="complete">Selesai</string>
    <string name="check_reading_all_notification">Tandai Sebagai Membaca</string>

    <!--placeholder-->
    <string name="search">Search</string>
    <string name="date_example">12/05/2020</string>
    <string name="time_example">12.30 AM</string>
    <string name="belum_punya_akun">Belum punya akun? </string>
    <string name="sudah_punya_akun">Sudah punya akun? </string>
    <string name="masuk_dengan">Atau masuk dengan</string>

    <!--Hint-->
    <string name="hint_email">Masukkan Email</string>
    <string name="hint_password">Masukkan Kata Sandi</string>
    <string name="hint_nama_depan">Masukkan Nama Depan</string>
    <string name="hint_nama_belakang">Masukkan Nama Belakang</string>
    <string name="hint_search_task">Cari Tugas</string>

    <!--Title-->
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>

    <!--Greeting-->
    <string name="welcome_login">Selamat Datang</string>
    <string name="welcome_register">Selamat Datang di Tasku</string>
    <string name="welcome_login_desc">Masuk dulu yuk sebelum lanjut</string>
    <string name="welcome_register_desc">Buat akun dulu yuk sebelum mulai</string>

    <!--menu-->
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="notif">Notif</string>
    <string name="akun">Akun</string>

    <!--Loading State-->
    <string name="loading_state">Tunggu sebentar yaa</string>

    <!--Search Not Found-->
    <string name="search_result_not_found">Pencarian tidak ditemukan!</string>

    <!--Confirmation-->
    <string name="confirmation_title_logout">Konfirmasi keluar</string>
    <string name="confirmation_desc_logout">Setelah kamu keluar, kamu tidak bisa membuat tugas dan tidak mendapatkan notifikasi. Apakah yakin ingin keluar?</string>
    <string name="confirmation_delete_task">Yakin ingin menghapus tugas ini?</string>
    <string name="confirmation_desc_delete_task">Tugas akan hilang secara permanen,\nPastikan kamu sudah menyelesaikan tugas ini</string>
    <string name="confirmation_checked_task">Konfirmasi Tugas</string>
    <string name="confirmation_desc_checked_task">Apakah kamu sudah menyelesaikan tugas?\nsetelah checklist tugas akan dihapus permanen setelah 30 hari</string>

    <!--Massage-->
    <string name="field_no_valid">%s tidak valid</string>
    <string name="field_cant_empty">%s tidak boleh kosong</string>
    <string name="password_rules_length">Kata sandi harus setidaknya 6 karakter</string>
    <string name="password_invalid">Password tidak cocok</string>
    <string name="password_successfully_change">Password berhasil diperbarui!</string>
    <string name="password_failed_change">Password tidak berhasil diperbarui!</string>
    <string name="text_result_register_success">Berhasil register</string>
    <string name="text_result_register_failed">Gagal register</string>
    <string name="text_result_login_success">Berhasil login</string>
    <string name="text_result_login_failed">Gagal login</string>
    <string name="text_result_logout_success">Berhasil logout</string>
    <string name="text_result_logout_failed">Gagal logout</string>
    <string name="text_message_error_server">Maaf, ada kesalahan dari server</string>
    <string name="text_message_error_internet_connection">Tidak dapat menjangkau server, periksa koneksi internet Anda!</string>
    <string name="text_message_error_something">Maaf, ada keselahan tidak terduga</string>
    <string name="text_message_error_auth_something_wrong">Hmm, email/password kamu salah.</string>
    <string name="text_message_error_field_cant_empty">%s tidak boleh kosong</string>
    <string name="text_message_success_create_task">Tugas baru berhasil dibuat!</string>
    <string name="text_message_failure_create_task">Tugas baru gagal dibuat!</string>
    <string name="text_message_success_update_task">Tugas berhasil diperbarui!</string>
    <string name="text_message_failure_update_task">Tugas gagal diperbarui!</string>
    <string name="text_message_success_complete_task">Tugas berhasil diselesaikan!</string>
    <string name="text_message_failure_complete_task">Tugas gagal diselesaikan!</string>
    <string name="text_message_success_update_profile">Profil berhasil diperbarui!</string>
    <string name="text_message_failure_update_profile">Profil gagal diperbarui!</string>

    <string name="text_message_data_empty">Tidak ada tugas\nKlik + untuk membuat tugas</string>


    <string name="please_wait">Mohon Tunggu…</string>
    <string name="tambah_task">Tambah task</string>
    <string name="warning">Warning</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="password_before">Kata sandi saat ini</string>
    <string name="hint_password_before">Masukan kata sandi saat ini</string>
    <string name="password_now">Kata sandi baru</string>
    <string name="confirmation_password_now">Konfirmasi kata sandi baru</string>
    <string name="hint_password_now">Masukan kata sandi baru</string>
    <string name="hint_password_now_confirm">Masukan ulang kata sandi baru</string>
    <string name="avatar">Avatar</string>
    <string name="category">Kategori</string>
    <string name="illus_login">illus_login</string>

    <!--Message Notification-->
    <string name="notification_new_task">Tugas \"%s\" berhasil dibuat!</string>
    <string name="notification_update_task">Tugas \"%s\" berhasil diperbarui!</string>
    <string name="notification_task_deadline_tomorrow">Tugas \"%s\" deadline besok loh!, segera selesaik tugasnya!</string>
    <string name="notification_task_late_one_week">Tugas \"%s\" sudah terlambat 7 hari!</string>

    <!--Category Task-->
    <string name="personal">Pribadi</string>
    <string name="work">Kerja</string>
    <string name="school">Sekolah</string>
    <string name="total_task">%d Tugas</string>
    <string name="you_task">Tugas Anda</string>
    <string name="create_task">Buat Tugas</string>
    <string name="title_task">Judul Tugas</string>
    <string name="hint_title_task">Masukan judul tugas</string>
    <string name="date">Tanggal</string>
    <string name="time">Waktu</string>

    <string name="setting_date">Atur Tanggal</string>
    <string name="setting_time">Atur Waktu</string>
    <string name="button">Button</string>
    <string name="hint_date_task">Masukan tanggal tugas</string>
    <string name="hint_time_task">Masukan waktu tugas</string>
    <string name="delete">Hapus</string>
    <string name="edit">Edit</string>

    <string name="month_year">%s %s</string>
    <string name="double_month_year">%s - %s %s</string>
    <string name="notification">Notifikasi</string>
    <string name="message_state_notification">Buat Tugas Baru Untuk\nMendapatkan Notifikasi Tugas.</string>


</resources>