<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/root_padding"
    android:paddingVertical="@dimen/large_padding">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MyTask.H5.SemiBold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_password_before"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding"
        android:text="@string/password_before"
        android:textAppearance="@style/TextAppearance.MyTask.H5.Regular"
        app:layout_constraintBottom_toTopOf="@id/layout_edt_password_before"
        app:layout_constraintTop_toBottomOf="@id/tv_title_change_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edt_password_before"
        style="@style/Widget.MyTask.LayoutInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        app:layout_constraintTop_toBottomOf="@id/tv_title_password_before"
        app:passwordToggleEnabled="true">

        <com.scrumteam.mytask.custom.components.InputText
            android:id="@+id/edt_password_before"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password_before"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_password_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding"
        android:text="@string/password_now"
        android:textAppearance="@style/TextAppearance.MyTask.H5.Regular"
        app:layout_constraintBottom_toTopOf="@id/layout_edt_password_now"
        app:layout_constraintTop_toBottomOf="@id/layout_edt_password_before" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edt_password_now"
        style="@style/Widget.MyTask.LayoutInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        app:layout_constraintTop_toBottomOf="@id/tv_title_password_now"
        app:passwordToggleEnabled="true">

        <com.scrumteam.mytask.custom.components.InputText
            android:id="@+id/edt_password_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password_now"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="0dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_password_now_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding"
        android:text="@string/confirmation_password_now"
        android:textAppearance="@style/TextAppearance.MyTask.H5.Regular"
        app:layout_constraintBottom_toTopOf="@id/layout_edt_password_now_confirm"
        app:layout_constraintTop_toBottomOf="@id/layout_edt_password_now" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edt_password_now_confirm"
        style="@style/Widget.MyTask.LayoutInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        app:layout_constraintTop_toBottomOf="@id/tv_title_password_now_confirm"
        app:passwordToggleEnabled="true">

        <com.scrumteam.mytask.custom.components.InputText
            android:id="@+id/edt_password_now_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password_now_confirm"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_accept"
        style="@style/Widget.MyTask.Button.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_padding"
        android:layout_marginBottom="@dimen/medium_padding"
        android:text="@string/complete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_edt_password_now_confirm" />


</androidx.constraintlayout.widget.ConstraintLayout>