<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/root_padding"
    android:paddingVertical="@dimen/large_padding">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_warning"
        android:layout_width="@dimen/size_avatar_medium"
        android:layout_height="@dimen/size_avatar_medium"
        android:contentDescription="@string/warning"
        android:src="@drawable/warning"
        app:layout_constraintBottom_toTopOf="@id/tv_title_confirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:text="@string/confirmation_checked_task"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.MyTask.H3.Medium"
        app:layout_constraintBottom_toTopOf="@id/tv_desc_confirmation"
        app:layout_constraintTop_toBottomOf="@id/iv_warning" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_desc_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/gray"
        android:text="@string/confirmation_desc_checked_task"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MyTask.Body.Regular"
        app:layout_constraintBottom_toTopOf="@id/divider_1"
        app:layout_constraintTop_toBottomOf="@id/tv_title_confirmation" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginHorizontal="@dimen/large_padding"
        android:layout_marginTop="@dimen/medium_padding"
        app:layout_constraintBottom_toTopOf="@id/btn_accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_confirmation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_accept"
        style="@style/Widget.MyTask.Button.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding"
        android:text="@string/ya"
        app:layout_constraintBottom_toTopOf="@id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/divider_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.MyTask.Button.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding"
        android:layout_marginBottom="@dimen/medium_padding"
        android:text="@string/tidak"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_accept" />

</androidx.constraintlayout.widget.ConstraintLayout>